--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   dropdown_search: ^5.0.6
   image_picker: ^1.1.2
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
