--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dropdown_search: ^5.0.6
   image_picker: ^1.1.2
   material_design_icons_flutter: ^7.0.7296
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
