--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   image_picker: ^1.1.2
   material_design_icons_flutter: ^7.0.7296
   flutter_riverpod: ^2.6.1
+  url_launcher: ^6.3.1
+  dio: ^5.7.0
+  lottie: ^3.1.3
+  excel: ^4.0.6
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/animation/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
