--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   path_provider: ^2.1.5
   pdf: ^3.11.1
   printing: ^5.13.4
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
