--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   url_launcher: ^6.3.1
   excel: ^4.0.6
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
